CSS sarasu stiliai

--- a/2-css/8-plociai-kita/styles.css
+++ b/2-css/8-plociai-kita/styles.css
@@ -61,3 +61,10 @@ table, td, th {
 #kita-lentele, td {
     vertical-align: center;
 }
+/* ul#pirmas-sarasas galima rasyti taip, labiau sukonkretinant */
+#pirmas-sarasas {
+    list-style-type: square;
+}
+ol#antras-sarasas {
+    list-style-type: lower-alpha;
+}
