--- a/2-css/19-uzduotis-prisijungimo-forma/styles.css
+++ b/2-css/19-uzduotis-prisijungimo-forma/styles.css
@@ -5,6 +5,7 @@ body {
     display: inline-flex;
     width: 1920px;
     background-repeat: no-repeat;
+    /* font-family: 'Niramit', sans-serif; */ 
 }
 #frame {
     background-color: white;
@@ -15,4 +16,42 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 35px;
+}
+.one {
+    font-family: 'Niramit', sans-serif;
+font-style: normal;
+font-weight: 700;
+line-height: 120%;
+justify-content: stretch;
+}
+form {
+    margin: 0;
+    gap: 8px;
+}
+.button {
+    display: flex;
+    padding: 16px 48px;
+    justify-content: center;
+    align-items: center;
+    
+    border-radius: 30px;
+    background: #02B4E2;
+}
+.pass  {
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    flex: 1 0 0;
+    align-self: stretch;
+    border: 1.25px solid #EAEAEA;
+    padding: 16px 48px;
+    gap: 8px;
+}
+p {
+    font-family: 'Niramit', sans-serif; 
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
 }
