--- a/3-sass/3-pvz/assets/sass/main.scss
+++ b/3-sass/3-pvz/assets/sass/main.scss
@@ -9,6 +9,8 @@ html, body {
 
 @import 'shared/navbar';
 @import 'shared/footer';
+@import 'shared/header';
+@import 'shared/grid';
 
 @import 'pages/home';
 @import 'pages/about-us';
