--- a/3-sass/3-pvz/assets/css/main.css
+++ b/3-sass/3-pvz/assets/css/main.css
@@ -12,7 +12,7 @@ nav {
     color: white;
     transition: 0.2s all;
     text-decoration: none; }
-    nav a:hover {
+    nav a:hover, nav a.active {
       color: orange; }
   nav ul {
     margin: 0;
@@ -21,5 +21,21 @@ nav {
       display: inline-block;
       list-style-type: none;
       margin-left: 20px; }
+
+header {
+  background: #7cc925;
+  padding: 50px 0; }
+
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto; }
+
+.home-page .about-us-section {
+  background: blue;
+  padding: 27px; }
+.home-page .services-section {
+  background: yellow;
+  padding: 27px; }
 
 /*# sourceMappingURL=main.css.map */
